local computer -> local repository

--- a/version-control.Rmd
+++ b/version-control.Rmd
@@ -34,7 +34,7 @@ By the end of the chapter, readers will be able to:
 - Describe what version control is and why data analysis projects can benefit from it
 - Create a remote version control repository on GitHub
 - use Jupyter's Git version control tools for project versioning and collaboration: 
-  - clone a remote version control repository to a local computer
+  - clone a remote version control repository to create a local repository
   - commit changes to a local version control repository
   - push local changes to a remote version control repository
   - pull changes from a remote version control repository to a local version control repository
@@ -128,7 +128,7 @@ Typically when we put a data analysis project under version control,
 we create two copies of the repository (Figure \@ref(fig:vc1-no-changes)). 
 One copy we use as our primary workspace where we create, edit, and delete files.
 This copy is commonly referred to as the **local repository**. The local
-copy most commonly exists on our local computer or laptop, but can also exist within
+repository most commonly exists on our computer or laptop, but can also exist within
 a workspace on a server (e.g., JupyterHub).
 The other copy is typically stored in a repository hosting service (e.g., GitHub), where
 we can easily share it with our collaborators. 
@@ -265,7 +265,7 @@ committing them to their own local repository, and pushing their commits to the 
 to share them with you. When they push their changes, those changes will only initially exist in 
 the remote GitHub repository and not in your local repository (Figure \@ref(fig:vc2-changes)).
 
-```{r vc6-remote-changes, fig.cap = 'Changes pushed by collaborators, or created directly on GitHub will not be automatically sent to your local computer.', fig.retina = 2}
+```{r vc6-remote-changes, fig.cap = 'Changes pushed by collaborators, or created directly on GitHub will not be automatically sent to your local repository.', fig.retina = 2}
 image_read("img/vc6-remote-changes.png") %>%
   image_crop("3632x2000")
 ```
