done polishing collaboration section

--- a/version-control.Rmd
+++ b/version-control.Rmd
@@ -662,17 +662,17 @@ to enable write access.
 
 ### Pulling changes from GitHub using Jupyter
 
-Below we walk through how to use the Jupyter Git extension tool to pull changes 
-to our `eda.ipynb` analysis file that were made by our collaborator 
+We will now walk through how to use the Jupyter Git extension tool to pull changes 
+to our `eda.ipynb` analysis file that were made by a collaborator 
 (Figure \@ref(fig:git-pull-00)).
 
-```{r git-pull-00, fig.cap = 'The GitHub interface indicates the name of the last person to push a commit to the remote repositoey, a preview of the associated commit message, the unique commit identifier, and how long ago the commit was snapshotted.', fig.retina = 2}
+```{r git-pull-00, fig.cap = 'The GitHub interface indicates the name of the last person to push a commit to the remote repository, a preview of the associated commit message, the unique commit identifier, and how long ago the commit was snapshotted.', fig.retina = 2}
 image_read("img/version_control/git_pull_00.png") %>%
   image_crop("3584x1900")
 ```
 
-You can do this using the Jupyter Git tab by clicking on the cloud icon with 
-the down arrow (Figure \@ref(fig:git-pull-01)).
+You can tell Git to "pull" by clicking on the cloud icon with 
+the down arrow in Jupyter (Figure \@ref(fig:git-pull-01)).
 
 ```{r git-pull-01, fig.cap = 'The Jupyter Git extension clone button', fig.retina = 2}
 image_read("img/version_control/git_pull_01.png")
@@ -681,7 +681,7 @@ image_read("img/version_control/git_pull_01.png")
 Once the files are successfully pulled from GitHub, you need to click "Dismiss"
 to keep working (Figure \@ref(fig:git-pull-02)).
 
-```{r git-pull-02, fig.cap = 'The Jupyter Git extension prompt after changes have been successfully pulled from a remote repository.', fig.retina = 2}
+```{r git-pull-02, fig.cap = 'The prompt after changes have been successfully pulled from a remote repository.', fig.retina = 2}
 image_read("img/version_control/git_pull_02.png")
 ```
 
@@ -693,7 +693,7 @@ image_read("img/version_control/git_pull_03.png")
 ```
 
 It can be very useful to review the history of the changes to your project. You
-can do this directly on the JupyterHub by clicking "History" in the Git tab 
+can do this directly in the Jupyter by clicking "History" in the Git tab 
 (Figure \@ref(fig:git-pull-04)).
 
 ```{r git-pull-04, fig.cap = 'Version control repository history viewed using the Jupyter Git extension.', fig.retina = 2}
@@ -713,17 +713,17 @@ image_read("img/version_control/merge_conflict_01.png") %>%
   image_crop("3584x1900")
 ```
 
-Usually, getting out of this situation is not too troublesome. First you need to 
-pull the changes that exist on GitHub that you do not yet have on your machine.
-Usually when this happens, Git can automatically merge the changes for you, 
-even if you and your collaborators were working on different parts of the same 
-file!
+Usually, getting out of this situation is not too troublesome. First you need
+to pull the changes that exist on GitHub that you do not yet have in the local
+repository.  Usually when this happens, Git can automatically merge the changes
+for you, even if you and your collaborators were working on different parts of
+the same file!
 
-If however, you and your collaborators made changes to the same line of the same
-file, Git will not be able to automatically merge the changes---it will not know whether to keep your version of the line(s), your 
-collaborators version of the line(s), or some blend of the two. When this 
-happens, Git will tell you that you have a merge conflict and that it needs 
-human intervention (you!), and which file(s) this occurs in (Figure \@ref(fig:merge-conflict-03)).
+If, however, you and your collaborators made changes to the same line of the
+same file, Git will not be able to automatically merge the changes---it will
+not know whether to keep your version of the line(s), your collaborators
+version of the line(s), or some blend of the two. When this happens, Git will
+tell you that you have a merge conflict in certain file(s) (Figure \@ref(fig:merge-conflict-03)).
 
 ```{r merge-conflict-03, fig.cap = 'Error message that indicates you and your collaborators made changes to the same line of the same file and that Git will not be able to automatically merge the changes', fig.retina = 2}
 image_read("img/version_control/merge_conflict_03.png") %>%
@@ -732,11 +732,9 @@ image_read("img/version_control/merge_conflict_03.png") %>%
 
 ### Handling merge conflicts
 
-To fix the merge conflict we need to open the file that had the merge 
-conflict in a plain text editor 
-and look for special marks that Git puts in the file 
-to tell you where the merge conflict occurred 
-(Figure \@ref(fig:merge-conflict-04)). 
+To fix the merge conflict, we need to open the offending file
+in a plain text editor and look for special marks that Git puts in the file to
+tell you where the merge conflict occurred (Figure \@ref(fig:merge-conflict-04)). 
 
 ```{r merge-conflict-04, fig.cap = 'How to open a Jupyter notebook as a plain text file view in Jupyter.', fig.retina = 2}
 image_read("img/version_control/merge_conflict_04.png") %>%
@@ -748,17 +746,18 @@ conflict is preceded by `<<<<<<< HEAD` and the end of the merge conflict is
 marked by `>>>>>>>`. Between these markings, Git also inserts a separator 
 (`=======`). The version of the change before the separator is your change, and 
 the version that follows the separator was the change that existed on GitHub
-(Figure \@ref(fig:merge-conflict-05)).
+In Figure \@ref(fig:merge-conflict-05), you can see that in your local repository
+there is a line of code that calls `scale_color_manual` with three colour values (`deeppink2`, `cyan4`, and `purple1`).
+It looks like your collaborator made an edit to that line too, except with different colours (to `blue3`, `red3`, and `black`)!
 
 ```{r merge-conflict-05, fig.cap = 'Merge conflict identifiers (highlighted in red).', fig.retina = 2}
 image_read("img/version_control/merge_conflict_05.png") %>%
   image_crop("3584x1200")
 ```
 
-Once you have decided which version of the change 
-(or what combination!) to keep, 
-you need to use the plain text editor 
-to remove the special marks that Git added (Figure \@ref(fig:merge-conflict-06)).  
+Once you have decided which version of the change (or what combination!) to
+keep, you need to use the plain text editor to remove the special marks that
+Git added (Figure \@ref(fig:merge-conflict-06)).  
 
 ```{r merge-conflict-06, fig.cap = 'File where a merge conflict has been resolved.', fig.retina = 2}
 image_read("img/version_control/merge_conflict_06.png") %>%
