added note about sample size and bellshaped-ness of sampling dist

--- a/inference.Rmd
+++ b/inference.Rmd
@@ -544,14 +544,22 @@ grid.arrange(annotated_sampling_dist_20,
 )
 ```
 
-Based on the visualization in Figure \@ref(fig:11-example-means7), two points
+Based on the visualization in Figure \@ref(fig:11-example-means7), three points
 about the sample mean become clear.  First, the mean of the sample mean (across
 samples) is equal to the population mean. In other words, the sampling
 distribution is centred at the population mean.  Second, increasing the size of
 the sample decreases the spread (i.e., the variability) of the sampling
 distribution. Therefore, a larger sample size results in a more reliable point
-estimate of the population parameter.
+estimate of the population parameter. And third, the distribution of the sample
+mean is roughly bell-shaped.
 
+> **Note:** You might notice that in the `n = 20` case in Figure \@ref(fig:11-example-means7),
+> the distribution is not *quite* bell-shaped. There is a bit of skew towards the right!
+> You might also notice that in the `n = 50` case and larger, that skew seems disappear.
+> In general, the sampling distribution&mdash;for both means and proportions&mdash;only 
+> becomes bell-shaped *once the sample size is large enough*.
+> How large is "large enough?" Unfortunately, it depends entirely on the problem at hand. But 
+> as a rule of thumb for many problems in practice, having a sample size of at least 20 will suffice.
 
 <!--- > **Note:** If random samples of size $n$ are taken from a population, the sample mean $\bar{x}$ will be approximately Normal with mean $\mu$ and standard deviation $\frac{\sigma}{\sqrt{n}}$ as long as the sample size $n$ is large enough. $\mu$ is the population mean, $\sigma$ is the population standard deviation, $\bar{x}$ is the sample mean, and $n$ is the sample size. 
 > If samples are selected from a finite population as we are doing in this chapter, we should apply a finite population correction. We multiply $\frac{\sigma}{\sqrt{n}}$ by $\sqrt{\frac{N - n}{N - 1}}$ where $N$ is the population size and $n$ is the sample size. If our sample size, $n$, is small relative to the population size, this finite correction factor is less important. 
