moving section down to additional resources

--- a/02-wrangling.Rmd
+++ b/02-wrangling.Rmd
@@ -385,7 +385,7 @@ Here we wrote out the names of each of the columns. However, this method is time
 column_range <- select(lang_no_delimiter, language:most_at_work)
 column_range
 ```
-Notice that we get the same output as we did above, but with less typing! This type of operator is handy, especially for large data sets. 
+Notice that we get the same output as we did above, but with less typing and thus less error prone! This type of operator is handy, especially for large data sets
 
 Suppose instead we wanted to extract columns that followed a particular pattern rather than just selecting a range. Let's say we wanted only to select the columns `most_at_home` and `most_at_work`. There are some helpers, which allow us to select variables based on their names. Here we can use the `select` helper `starts_with` to choose only the columns that start with the word "most": 
 
@@ -809,13 +809,6 @@ summarize(
 lang_summary_by_region
 ```
 
-### Additional reading on the `dplyr` functions
-
-As we briefly mentioned earlier in a note, the `tidyverse` is actually a *R meta package*: it installs and loads a collection of R packages that all follow 
-the tidy data philosophy we discussed above. One of the `tidyverse` packages is `dplyr` - a data wrangling workhorse. You have already met six of 
-the dplyr function (`select`, `filter`, `mutate`, `arrange`, `summarize`, and `group_by`). To learn more about those six and meet a few more 
-useful functions, we recommend you checkout [this chapter](http://stat545.com/block010_dplyr-end-single-table.html#where-were-we) of the Data wrangling, exploration, and analysis with R book.
-
 ## Using `summarize` and `across` to iterate 
 
 Where should you turn when you discover the next step in your data wrangling/cleaning process requires you to apply a function to 
@@ -960,6 +953,10 @@ The `map_*` functions are generally quite useful for solving problems involving 
 of a data frame; `map_*` functions can be used to apply functions to elements of a vector or list, and even to lists of data frames, or nested data frames.
 
 ## Additional resources
+- As we briefly mentioned earlier in a note, the `tidyverse` is actually a *R meta package*: it installs and loads a collection of R packages that all follow 
+the tidy data philosophy we discussed above. One of the `tidyverse` packages is `dplyr` - a data wrangling workhorse. You have already met six of 
+the dplyr function (`select`, `filter`, `mutate`, `arrange`, `summarize`, and `group_by`). To learn more about those six and meet a few more 
+useful functions, we recommend you checkout [this chapter](http://stat545.com/block010_dplyr-end-single-table.html#where-were-we) of the Data wrangling, exploration, and analysis with R book.
 - The [`dplyr` page on the tidyverse website](https://dplyr.tidyverse.org/) is where you should look if you want to learn more about the functions in this chapter, the full set of arguments you can use, and other related functions. The site also provides a very nice cheat sheet that summarizes many of the data wrangling functions from this chapter.
 - Check out the [tidyselect page](https://tidyselect.r-lib.org/reference/select_helpers.html) for a comprehensive list of `select` helpers. 
 - [R for Data Science](https://r4ds.had.co.nz/) has a few chapters related to data wrangling that go into more depth than this book. For example, the [tidy data](https://r4ds.had.co.nz/tidy-data.html) chapter covers tidy data, `pivot_longer`/`pivot_wider` and `separate`, but also covers missing values and additional wrangling functions (like `unite`). The [data transformation](https://r4ds.had.co.nz/transform.html) chapter covers `select`, `filter`, `arrange`, `mutate`, and `summarize`. And the [`map_*` functions](https://r4ds.had.co.nz/iteration.html#the-map-functions) chapter provides more about the `map_*` functions.
