making corrections to the formatting

--- a/02-wrangling.Rmd
+++ b/02-wrangling.Rmd
@@ -1,4 +1,4 @@
-# Cleaning and wrangling data {\#wrangling}
+# Cleaning and wrangling data {#wrangling}
 
 ## Overview
 
@@ -103,17 +103,15 @@ year <- c(2015, 2013, 2011, 2016, 2018)
 year
 ```
 
-Table: (\#tab:datatype-table) Basic data types in R
+Table: (#tab:datatype-table) Basic data types in R
 
 | Data type | Description | Example |
 | --- | --- | --- |
 | character | Letters or numbers surrounded by quotes | "1" , "Hello world!" |
 | double | Numbers with decimals values | 1.2333 |
-| integer | Numbers that do not contain decimals | 1L, 20L (where "L" tells R to
-store as an integer) |
+| integer | Numbers that do not contain decimals | 1L, 20L (where "L" tells R to store as an integer) |
 | logical | A value of true and false | `TRUE`, `FALSE` |
-| factor | Used to represent data with a limited number of values | a `size`
-variable with levels "large", "medium" and "small" |
+| factor | Used to represent data with a limited number of values | a `size` variable with levels "large", "medium" and "small" |
 
 > "Numeric" is an umbrella term that includes integer and double data types.
 > Most of the time when working with numbers in R they will be double types. For
@@ -180,17 +178,13 @@ Vectors, data frames and lists are basic types of *data structures* in R which
 are core to most data analyses. We summarize them in table
 \@ref(tab:datastructure-table).
 
-Table: (\#tab:datastructure-table) Basic data structures in R
+Table: (#tab:datastructure-table) Basic data structures in R
 
 | Data Structure | Description |
 | --- | --- |
-| vector | An ordered collection of one, or more, values of the *same data type*
-(e.g. all values are numeric). *Note: in R, a vector of length one is used to
-represent a single value.* |
-| data frame | A list of *vectors* of the *same length*, which has column and
-row names. We typically use a data frame to represent a data set. |
-| list | An ordered collection of one, or more, values. The elements in the list
-can be of different data types. |
+| vector | An ordered collection of one, or more, values of the *same data type* (e.g. all values are numeric). *Note: in R, a vector of length one is used to represent a single value.* |
+| data frame | A list of *vectors* of the *same length*, which has column and row names. We typically use a data frame to represent a data set. | 
+| list | An ordered collection of one, or more, values. The elements in the list can be of different data types. |
 
 > There are several other data structures in the R programming language (*e.g.,*
 > matrices), however, they are beyond the scope of this book.
@@ -332,7 +326,7 @@ been met:
 3.  Each value is a single cell, i.e., its row, column position in the data
     frame is not shared with another value.
 
-### Going from long to wide using `pivot_wider` {\#pivot-wider}
+### Going from long to wide using `pivot_wider` {#pivot-wider}
 
 Suppose we have observations spread across multiple rows rather than in a single
 row. For example, in Figure \@ref(fig:long-to-wide), the table on the left is an
@@ -411,7 +405,7 @@ we did in our messy one. Therefore `pivot_wider` didn't really "widen" our data
 as the name suggests. However, if we had more than two categories in the
 original `type` column, then we would see the data set "widen."
 
-### Using `separate` to deal with multiple delimiters  {\#separate}
+### Using `separate` to deal with multiple delimiters  {#separate}
 
 Data are also not considered tidy when multiple values are stored in the same
 cell. The data set we show below is even messier than the ones we dealt with
@@ -773,13 +767,11 @@ filter(official_langs, most_at_home > 2669195)
 census_popn <- 35151728
 number_most_home <- filter(official_langs, language == "English" & region == "Toronto") |>
 pull(most_at_home)
-```
 
-toronto\_popn \<- region\_data |\> filter(region == "Toronto") |\>
+toronto_popn <- region_data |> filter(region == "Toronto") |>
 pull(population)
-
-``` 
 ```
+
 
 
 We can see in the table that
@@ -816,12 +808,11 @@ our data set.
 city_populations <- c(5928040, 4098927, 2463431, 1392609, 1321426)
 ```
 
-official\_langs \<- mutate(official\_langs, most\_at\_home\_proportion =
-most\_at\_home / city\_populations )
+```{r, include = FALSE}
+official_langs <- mutate(official_langs, most_at_home_proportion =
+most_at_home / city_populations )
 
-official\_langs
-
-``` 
+official_langs
 ```
 
 Notice that we divided a vector with 10 elements (`most_at_home`) by a vector
