removing warning for tidymodel loading since its extraneous info

--- a/classification1.Rmd
+++ b/classification1.Rmd
@@ -543,7 +543,7 @@ in this collection will help keep our code simple, readable and accurate; the
 less we have to code ourselves, the fewer mistakes we are likely to make. We 
 start off by loading `tidymodels`.
 
-```{r 05-tidymodels}
+```{r 05-tidymodels, warning = FALSE}
 library(tidymodels)
 ```
 
