--- a/classification1.Rmd
+++ b/classification1.Rmd
@@ -99,7 +99,7 @@ manipulate factors in R. As we learned in Chapter \@ref(viz), factors are a spec
 R that are often used for class label data. 
 
 
-```{r 05-load-libraries, warning = FALSE}
+```{r 05-load-libraries, warning = FALSE, message = FALSE}
 library(tidyverse)
 library(forcats)
 ```
@@ -543,7 +543,7 @@ in this collection will help keep our code simple, readable and accurate; the
 less we have to code ourselves, the fewer mistakes we are likely to make. We 
 start off by loading `tidymodels`.
 
-```{r 05-tidymodels, warning = FALSE}
+```{r 05-tidymodels, warning = FALSE, message = FALSE}
 library(tidymodels)
 ```
 
