addressing rev As comments about reference on the web

--- a/classification1.Rmd
+++ b/classification1.Rmd
@@ -84,7 +84,7 @@ the diagnosing physician is. Furthermore, benign tumours are not normally
 dangerous; the cells stay in the same place and the tumour stops growing before
 it gets very large. By contrast, in malignant tumours, the cells invade the
 surrounding tissue and spread into nearby organs where they can cause serious
-damage ([learn more about cancer here](https://www.worldwidecancerresearch.org/who-we-are/cancer-basics/)).
+damage (@stanfordhealthcare).
 Thus, it is important to quickly and accurately diagnose the tumour type to
 guide patient treatment.
 
@@ -738,9 +738,8 @@ is only one black line on this plot).  Here the computation of nearest
 neighbours is dominated by the much larger-scale area variable. On the right,
 the plot for standardized data shows a much more intuitively reasonable
 selection of nearest neighbours. Thus, standardizing the data can change things
-in an important way when we are using predictive algorithms.  As a rule of
-thumb, standardizing your data should be a part of the preprocessing you do
-before any predictive modelling / analysis.
+in an important way when we are using predictive algorithms.  Standardizing your data should be a part of the preprocessing you do
+before predictive modelling / analysis, and its important to think about whether the problem domain and whether you need to standardize your data.
 
 ```{r 05-scaling-plt, echo = FALSE, fig.height = 4, fig.width = 10, fig.cap = "Comparison of K = 3 nearest neighbours with standardized and unstandardized data"}
 
