--- a/references.bib
+++ b/references.bib
@@ -106,6 +106,7 @@
     url = {https://www.R-project.org/},
   }
 
+
 @online{tidyversestyleguide,
   year = 2020,
   author = {Hadley Wickham},
@@ -217,4 +218,11 @@
   publisher = {IOS Press},
   volume = {87},
   address = {Amsterdam}
+}
+
+@online{stanfordhealthcare,
+  year = 2021,
+  author = {Stanford Health Care},
+  title = {What is Cancer?},
+  url = {https://stanfordhealthcare.org/medical-conditions/cancer/cancer.html}
 }
